대시보드 홈 임시 완료

--- a/css/import.css
+++ b/css/import.css
@@ -2,5 +2,6 @@
 /* @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); */
 
 @import url('reset.css');
+@import url('allGlobal.css');
 @import url('global.css');
 @import url('page.css');
