--- a/dashboard/css/import.css
+++ b/dashboard/css/import.css
@@ -1,4 +1,4 @@
 @import url('../../css/reset.css');
-@import url('../../css/global.css');
+@import url('../../css/allGlobal.css');
 @import url('global.css');
 @import url('page.css');
