--- a/css/global.css
+++ b/css/global.css
@@ -1,102 +1,18 @@
-/* 포인트 색상 */
-mark:not([class]){color: #2de09f;}
-
-/* 제목 공통 */
-.title01{font-size: 40px; font-weight: 700; line-height: 50px;}
-.title02{font-size: 36px; font-weight: 700; line-height: 43px;}
-
-/* 접근성 */
-.textHidden{position: absolute; top: 0; height: 0.1px; overflow: hidden;}
-
-/* 이미지 박스 */
-.imgBox{text-indent: -9999px; background-repeat: no-repeat; background-position: center; background-size: cover;}
+/* 공통 */
+/* 컨텐츠 크기 */
+.contentSize{max-width: 1180px; margin: 0 auto; width: calc(100% - 60px); min-width: 964px;}
 
 /* 버튼 케이스 */
-[class|='btn']{font-size: 20px; font-weight: 700; height: 60px; display: flex; justify-content: center; align-items: center; border-radius: 6px;}
-.btn-color{background-color: #2de09f; color: white; border: none;}
-.btn-border{color: #2de09f; border: 1px solid #2de09f; background-color: transparent;}
-.btn-color + .btn-border{margin-top: 20px;}
+[class|='btn']{font-size: 20px; height: 60px;}
 
-/* 체크박스 , 라디오 박스 */
-input[type="checkbox"] , input[type="radio"]{display: none;}
-:is(input[type="checkbox"] , input[type="radio"]) + label{display: inline-flex; align-items: center;}
-:is(input[type="checkbox"] , input[type="radio"]) + label::before{content: ''; width: 20px; height: 20px; margin-right: 10px; background-repeat: no-repeat; background-position: center; background-size: cover;}
-/* input[type="checkbox"] + label::before{background-image: ;} */
-input[type="checkbox"]:checked + label::before{background-image: url('../images/icon-check-chekced.png');}
-input[type="radio"] + label::before{background-image: url('../images/icon-radio.png');}
-input[type="radio"]:checked + label::before{background-image: url('../images/icon-radio-chekced.png');}
-
-
-/* form */
-[class*="width"]{margin: 0 auto;}
-.width680{width: 680px;}
-.width400{width: 400px;}
-.linkBox{display: flex; justify-content: center; align-items: center; margin-bottom: 80px;}
-.linkBox li:not(:last-child){margin-right: 60px;}
-.linkBox li a{font-size: 18px;}
-.linkBox li:is(.active , :hover) a{font-weight: 700; text-decoration-line: underline; text-underline-offset: 4px; text-decoration-thickness: 2px;}
-fieldset{font-size: 15px;}
-fieldset legend{font-size: 18px; font-weight: 700; margin-bottom: 40px;}
-fieldset legend::before{content: ''; display: block; width: 35px; height: 3px; background-color: #2de09f; margin-bottom: 15px;}
-fieldset ul{margin-bottom: 60px;}
-fieldset ul li :is(div :is(input , textarea , select) , .termsBox){box-sizing: border-box; background-color: #f8f8f8; border: 1px solid #f0f0f0; border-radius: 6px;}
-fieldset ul li :is(div textarea , .termsBox){padding: 20px; align-items: flex-start;}
-fieldset ul li div textarea{height: 300px;}
-fieldset .inputBox{display: flex; flex-wrap: wrap; justify-content: space-between;}
-fieldset .inputBox li:not(.half){width: 100%;}
-fieldset .inputBox li.half{width: 47.79%;}
-fieldset .inputBox li label{display: block; font-weight: 700; margin-bottom: 15px;}
-fieldset .inputBox li:not(:first-child) label{margin-top: 30px;}
-fieldset .inputBox li div{display: flex; gap: 10px;}
-fieldset .inputBox li div :is(input , select){height: 50px; padding: 0 20px;}
-fieldset .inputBox li div :is(input , textarea)::placeholder{color: #999;}
-fieldset .inputBox li div:not(:is( textarea , .termsBox)){align-items: center;}
-fieldset .inputBox li div:has(button , mark , time){position: relative;}
-fieldset .inputBox li div:has(button , mark , time) :is(button , mark , time){position: absolute; top: 50%; transform: translateY(-50%);}
-fieldset .inputBox li div:has(button) button{right: 5px; font-size: 14px; font-weight: 400; color: #999; height: 40px; padding: 0 15px; background-color: white; border: 1px solid #dedede; border-radius: 6px;}
-fieldset .inputBox li div:has(mark , time) :is(mark.error , time){color: #eb2f2f;}
-fieldset .inputBox li div:has(mark) mark.error{right: 15px; font-size: 12px;}
-fieldset .inputBox li div:has(time) time{right: 20px; font-size: 14px;}
-fieldset .inputBox li div *:first-child{flex: 1;}
-fieldset .inputBox li div *:first-child ~ :is(input , select){width: 200px;}
-fieldset input[type="submit"]{margin: 0 auto;}
-.termsBox{height: 200px;}
-
-
-/* 해더 공통 */
-:not(.mainPage) header{position: sticky; }
-header{top: 0; left: 0; display: flex; justify-content: center; align-items: center; background-color: white; border-bottom: 1px solid #dedede; z-index: 100;}
-header :is(h1 , div){position: absolute; top: 0; height: 100%; display: flex; align-items: center;}
-header h1{left: 30px;}
-header h1 a{width: 96px; height: 20px; background-image: url('../images/logo-color.png');}
-header nav ul{display: flex;}
-header nav ul li a{font-size: 16px; font-weight: 700; line-height: 70px;}
-header nav ul li:not(:last-child){margin-right: 80px;}
-header nav ul li:is(.active ,:hover){position: relative;}
-header nav ul li:is(.active ,:hover)::before{content: ''; position: absolute; left: 0; top: 13px; width: 100%; height: 3px; background-color: #2de09f;}
-header div{right: 30px;}
-header div a{font-size: 13px; font-weight: 700; color: #999;}
-header div a:not(:last-child){margin-right: 40px;}
-/* 해더 - 메인페이지 */
-.mainPage header{position: fixed; width: 100%;}
-header.active{border-bottom: none; background-color: transparent;}
-header.active h1 a{background-image: url('../images/logo.png');}
-header.active :is(ul li a , div a){color: white;}
-header.active nav ul li:is(.active ,:hover)::before{background-color: white;}
-
-/* 푸터 */
-[class$='Page']:not(.servicePage)  footer{margin-top: 160px;}
-:not(.rightAside) > footer{padding: 39.5px 0 75px; border-top: 1px solid #dedede;}
-:not(.rightAside) > footer > div{position: relative;}
-footer ul{display: flex;}
-footer ul li:not(:last-child){margin-right: 30px;}
-footer ul li a{font-size: 14px; font-weight: 700;}
-footer ul li:first-child a{color: #666;}
-:not(.rightAside) > footer > div ul{margin-bottom: 40px;}
-:not(.rightAside) > footer > div h2{max-width: 96px; margin-bottom: 20px;}
-:not(.rightAside) > footer > div h2 img{width: 100%;}
-:not(.rightAside) > footer > div address{display: flex; flex-wrap: wrap; max-width: 495px; gap: 12px 20px;}
-:not(.rightAside) > footer > div address p{font-size: 13px; font-weight: 500; color: #666;}
-:not(.rightAside) > footer > div div{position: absolute; right: 0; bottom: 0;}
-:not(.rightAside) > footer > div div p{font-size: 13px; font-weight: 500; margin-bottom: 15px;}
-:not(.rightAside) > footer > div div a{width: 172px; line-height: 40px; font-size: 13px; font-weight: 800; color: white; text-align: center; background-color: #2de09f; border-radius: 6px;}
+/* 게시판 */
+[class *="boardBox"]{border-top: 1px solid #111;}
+[class *="boardBox"] li{border-bottom: 1px solid #dedede;}
+[class *="boardBox"] li a{display: flex; align-items: center; font-size: 15px;}
+[class *="boardBox"] li a time{margin-left: auto;}
+[class *="boardBox"] li a p{font-weight: 700;}
+[class *="boardBox"] li a + div{display: none; border-top: 1px solid #dedede;}
+/* 게시판 - 드랍박스 */
+.boardBox-drop li a::after{content: ''; width: 40px; height: 40px; background: url('../images/icon-open.png') no-repeat center / cover; transition: rotate 0.5s;}
+.boardBox-drop li a:not(:has(time))::after{margin-left: auto;}
+.boardBox-drop li a.active::after{rotate: 180deg;}
