--- a/dashboard/css/page.css
+++ b/dashboard/css/page.css
@@ -1,1 +1,73 @@
-.homePage{}
+/* 대시보드 */
+
+/* 홈 */
+.homePage h3{margin-bottom: 30px;}
+.homePage > div > strong:first-child{display: block; font-size: 20px; font-weight: 700; margin-bottom: 20px;}
+.homePage > div:has(.subText){position: relative;}
+.homePage > div .subText{position: absolute; right: 0; top: 6px; font-size: 15px; color: #999;}
+/* 홈 - 캐시 */
+.homePage .cashArea{display: grid; grid-template-columns: repeat(2 , 1fr); grid-template-rows: 190px 130px; gap: 20px;}
+/* 홈 공통 */
+.homePage .cashArea > div{padding: 30px;}
+.homePage .cashArea > div > strong:first-child{font-size: 20px; font-weight: 700;}
+.homePage .cashArea > div:nth-child(1) strong::after,
+.homePage .cashArea > div:nth-child(2) b::after{content: '원';}
+.homePage .cashArea > div:nth-child(n + 2){border: 1px solid #dedede;}
+/* 홈 - 캐시 - 충전된 캐시 */
+.homePage .cashArea > div:nth-child(1){grid-column: 1 / 2; display: flex; justify-content: space-between; background-color: #2de09f; color: white; font-weight: 700;}
+.homePage .cashArea > div:nth-child(1) p{font-size: 20px;}
+.homePage .cashArea > div:nth-child(1) strong{font-size: 26px; align-self: flex-end;}
+.homePage .cashArea > div:nth-child(1) strong::after{font-size: 16px;}
+/* 홈 - 캐시 - 문자 */
+.homePage .cashArea > div:nth-child(2){grid-column: 1 / 2; grid-row: 2 / 2; display: flex; justify-content: space-between; align-items: center;}
+.homePage .cashArea > div:nth-child(2) strong small{display: block; font-size: 12px; font-weight: 400; color: #999; margin-top: 12px;}
+.homePage .cashArea > div:nth-child(2) ul{display: flex;}
+.homePage .cashArea > div:nth-child(2) ul li{font-size: 15px; text-align: center;}
+.homePage .cashArea > div:nth-child(2) ul li:not(:last-child){margin-right: 55px;}
+.homePage .cashArea > div:nth-child(2) ul li b{display: block; font-weight: 700; margin-top: 12px;}
+/* 홈 - 캐시 - 사용가능 건수 */
+.homePage .cashArea > div:nth-child(3){grid-column: 2 / 2; grid-row: 1 / 3;}
+.homePage .cashArea > div:nth-child(3) > strong{display: block; margin-bottom: 30px;}
+.homePage .cashArea > div:nth-child(3) ul{margin-bottom: 40px;}
+.homePage .cashArea > div:nth-child(3) ul li{display: flex; justify-content: space-between; align-items: center;}
+.homePage .cashArea > div:nth-child(3) ul li:not(:last-child){margin-bottom: 30px;}
+.homePage .cashArea > div:nth-child(3) ul li p{display: flex; font-size: 15px;}
+.homePage .cashArea > div:nth-child(3) ul li p b{font-weight: 700;}
+.homePage .cashArea > div:nth-child(3) ul li strong{font-size: 26px; font-weight: 800;}
+.homePage .cashArea > div:nth-child(3) ul li strong::after{content: '건'; font-size: 16px; font-weight: 400;}
+.homePage .cashArea > div:nth-child(3) a{}
+
+/* 홈 - 사용내역 */
+.homePage .historyArea ul{border-top: 1px solid #111;}
+.homePage .historyArea ul li{display: flex; align-items: center; font-size: 15px; border-bottom: 1px solid #dedede;}
+.homePage .historyArea ul li:first-child{font-weight: 700; height: 55px; text-align: center;}
+.homePage .historyArea ul li:not(:first-child){height: 75px;}
+.homePage .historyArea ul li:not(:first-child) b:not(:nth-child(2)){text-align: center;}
+.homePage .historyArea ul li > *{padding: 0 10px;}
+.homePage .historyArea ul li > *:nth-child(1){width: 130px;}
+.homePage .historyArea ul li > *:nth-child(2){width: 275px;}
+.homePage .historyArea ul li > *:nth-child(3){width: 30px; margin-right: 10px;}
+.homePage .historyArea ul li > *:is(:nth-child(4) , :nth-child(5) , :nth-child(6)){width: 100px;}
+.homePage .historyArea ul li > *:nth-child(7){width: 52px;}
+.homePage .historyArea > a{text-decoration: underline; text-underline-offset: 2px;}
+
+/* 홈 - 통계 */
+.homePage .statisticsArea ul{display: flex; gap: 20px;}
+.homePage .statisticsArea ul > li{flex: 1; padding: 30px; border: 1px solid #dedede; text-align: center;}
+.homePage .statisticsArea ul > li p{font-size: 15px; font-weight: 400; margin-bottom: 15px;}
+.homePage .statisticsArea ul > li p b{font-weight: 700;}
+.homePage .statisticsArea ul > li strong{display: block; font-size: 26px; font-weight: 800; margin-bottom: 45px;}
+.homePage .statisticsArea ul > li strong::before ,
+.homePage .statisticsArea ul > li strong::after{font-size: 16px; font-weight: 400;}
+.homePage .statisticsArea ul > li strong::before{content: '총';}
+.homePage .statisticsArea ul > li strong::after{content: '건';}
+.homePage .statisticsArea ul > li ol{width: 185px; margin: 0 auto; display: flex;}
+.homePage .statisticsArea ul > li ol li{flex: 1; display: flex; flex-direction: column;}
+.homePage .statisticsArea ul > li ol li mark{font-size: 13px; margin-top: auto;}
+.homePage .statisticsArea ul > li ol li[data-order="1"] mark{font-weight: 700;}
+.homePage .statisticsArea ul > li ol li mark::after{content: ''; display: block; width: 16px; margin: 7px auto 0;}
+.homePage .statisticsArea ul > li ol li:is([data-order="2"] , [data-order="3"]) mark::after{background-color: #d3ffef;}
+.homePage .statisticsArea ul > li ol li[data-order="1"] mark::after{height: 108px; background-color: #2de09f;}
+.homePage .statisticsArea ul > li ol li[data-order="2"] mark::after{height: 87px;}
+.homePage .statisticsArea ul > li ol li[data-order="3"] mark::after{height: 47px;}
+.homePage .statisticsArea ul > li ol li small{display: block; font-size: 14px; font-weight: 400; color: #999; padding-top: 12px; border-top: 1px solid #dedede;}
