--- a/dashboard/css/global.css
+++ b/dashboard/css/global.css
@@ -2,7 +2,9 @@
 .dashboardPage :is(section , footer) > div{max-width: 960px; width: calc(100% - 60px); margin: 0 auto;}
 
 /* 버튼 케이스 */
-[class|='btn']{font-size: 16px; height: 50px;}
+[class|='btn']:not(input[type="submit"]){font-size: 16px; height: 50px;}
+input[type="submit"][class|='btn']{width: 100%; height: 60px;}
+
 
 .dashboardPage{display: flex; min-height: calc(100vh - 71px);}
 /* 왼쪽 aside */
@@ -40,7 +42,7 @@
 .dashboardPage .leftAside > div > ul > li ul li:is(:hover , .active) a::before{background-color: #2de09f;}
 /* 컨텐츠 */
 .dashboardPage > section{flex: 1; padding-top: 60px;}
-.dashboardPage > section > div h3{font-size: 32px; font-weight: 700;}
+.dashboardPage > section > div > :is(h2 , h3){font-size: 32px; font-weight: 700;}
 .dashboardPage > section > div > div:not(:last-child){margin-bottom: 80px;}
 /* 오른쪽 aside */
 .dashboardPage .rightAside time{font-size: 15px; color: #999;}
