비밀번호 변경 페이지 완료

--- a/dashboard/css/global.css
+++ b/dashboard/css/global.css
@@ -3,7 +3,7 @@
 
 /* 버튼 케이스 */
 [class|='btn']:not(input[type="submit"]){font-size: 16px; height: 50px;}
-input[type="submit"][class|='btn']{width: 100%; height: 60px;}
+input:is([type="submit"],[type="reset"])[class|='btn']{width: 100%; height: 60px;}
 
 
 .dashboardPage{display: flex; min-height: calc(100vh - 71px);}
