--- a/dashboard/css/page.css
+++ b/dashboard/css/page.css
@@ -93,25 +93,37 @@
 .myPage > div fieldset .inputBox li div select{width: 100%;}
 .myPage > div fieldset .inputBox li div input[type="checkbox"] +label:not(:last-of-type){margin-right: 50px;}
 
+
+/* 마이페이지 - 기업 , 회원탈퇴 공통 */
+:is(.enterPage , .secessionPage) > div > div{background-color: #f8f8f8;}
 /* 마이페이지 - 기업 */
 /* 마이페이지 - 기업 공통 */
-.enterPage > div > div{background-color: #f8f8f8;}
-.enterPage > div > div:not(.infoArea){padding: 50px; text-align: center;}
-.enterPage > div > div:not(.infoArea) strong{display: block; font-size: 22px; font-weight: 700;}
-.enterPage > div > div:not(.infoArea) img{width: 160px; margin-bottom: 30px;}
+.myPage .enterPage > div > div:not(.infoArea){padding: 50px; text-align: center;}
+.myPage .enterPage > div > div:not(.infoArea) strong{display: block; font-size: 22px; font-weight: 700;}
+.myPage .enterPage > div > div:not(.infoArea) img{width: 160px; margin-bottom: 30px;}
 /* 마이페이지 - 기업 - 전환 */
-.enterPage > div .transformArea strong{line-height: 30px; margin-bottom: 30px;}
-.enterPage > div .transformArea button{width: 230px; margin: 0 auto;}
+.myPage .enterPage .transformArea strong{line-height: 30px; margin-bottom: 30px;}
+.myPage .enterPage .transformArea button{width: 230px; margin: 0 auto;}
 /* 마이페이지 - 기업 - 심사 중 */
-.enterPage > div .reviewArea strong{margin-bottom: 20px;}
-.enterPage > div .reviewArea p{font-size: 15px; font-weight: 400;}
-.enterPage > div .reviewArea p:first-of-type{line-height: 20px; margin-bottom: 30px;}
-.enterPage > div .reviewArea p:nth-of-type(2){margin-bottom: 10px;}
-.enterPage > div .reviewArea a{font-size: 18px; font-weight: 700;}
+.myPage .enterPage .reviewArea strong{margin-bottom: 20px;}
+.myPage .enterPage .reviewArea p{font-size: 15px; font-weight: 400;}
+.myPage .enterPage .reviewArea p:first-of-type{line-height: 20px; margin-bottom: 30px;}
+.myPage .enterPage .reviewArea p:nth-of-type(2){margin-bottom: 10px;}
+.myPage .enterPage .reviewArea a{font-size: 18px; font-weight: 700;}
 /* 마이페이지 - 기업 - 정보 */
-.enterPage > div .infoArea{padding: 40px;}
-.enterPage > div .infoArea dl{display: flex; justify-content: center; align-items: center; font-size: 15px; line-height: 18px;}
-.enterPage > div .infoArea dl:not(:last-child){margin-bottom: 30px;}
-.enterPage > div .infoArea dl::before{content: ''; width: 5px; height: 5px; background-color: #2de09f; border-radius: 1px; margin-right: 10px;}
-.enterPage > div .infoArea dl dt{width: 240px; font-weight: 700;}
-.enterPage > div .infoArea dl dd{width: 130px;}
+.myPage .enterPage .infoArea{padding: 40px;}
+.myPage .enterPage .infoArea dl{display: flex; justify-content: center; align-items: center; font-size: 15px; line-height: 18px;}
+.myPage .enterPage .infoArea dl:not(:last-child){margin-bottom: 30px;}
+.myPage .enterPage .infoArea dl::before{content: ''; width: 5px; height: 5px; background-color: #2de09f; border-radius: 1px; margin-right: 10px;}
+.myPage .enterPage .infoArea dl dt{width: 240px; font-weight: 700;}
+.myPage .enterPage .infoArea dl dd{width: 130px;}
+
+/* 마이페이지 - 탈퇴 - 정보 */
+.myPage > .secessionPage .infoArea{padding: 40px 0; text-align: center;}
+.myPage > .secessionPage .infoArea ul{display: flex;}
+.myPage > .secessionPage .infoArea ul li{flex: 1;}
+.myPage > .secessionPage .infoArea ul li:not(:last-child){border-right: 1px solid #dedede;}
+.myPage > .secessionPage .infoArea ul li img{width: 130px; margin-bottom: 30px;}
+.myPage > .secessionPage .infoArea ul li strong{display: block; font-size: 15px; font-weight: 700; line-height: 20px; margin-bottom: 15px;}
+.myPage > .secessionPage .infoArea ul li p{font-size: 14px; font-weight: 400; color: #999; line-height: 18px;}
+.myPage > .secessionPage .infoArea + button{width: 285px; margin: 60px auto 0;}
